// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bgClasses returns css array 1`] = `
Array [
  "grid__item",
  "two-fifths",
  "hard",
  "soft-half-left",
  "background--cover",
  "height-100_1uzzxpe",
]
`;

exports[`cardClasses returns css string 1`] = `"background--light-primary push-half-bottom@palm push-bottom@palm-wide-and-up card rounded text-dark-secondary display-block plain card_191rbi9"`;

exports[`gridClasses returns css string 1`] = `"grid flush height-100_1uzzxpe"`;

exports[`gridItemClasses returns css string 1`] = `"grid__item three-fifths soft-half floating--left one-whole height-100_1uzzxpe"`;

exports[`pClasses returns css string 1`] = `"small ellipsis-p_1heh7vk"`;

exports[`renders with props 1`] = `
<Link
  className="background--light-primary push-half-bottom@palm push-bottom@palm-wide-and-up card rounded text-dark-secondary display-block plain card_191rbi9"
  onClick={[Function]}
  onlyActiveOnIndex={false}
  style={Object {}}
  to="http://test.com"
>
  <div
    className="grid flush height-100_1uzzxpe"
  >
    <div
      className="grid__item three-fifths soft-half floating--left one-whole height-100_1uzzxpe"
    >
      <div
        className="floating__item one-whole soft-half-sides"
      >
        <h6>
          test item
        </h6>
        <p
          className="small ellipsis-p_1heh7vk"
        >
          test description
        </p>
      </div>
    </div>
    <ImageLoader
      force={true}
      imageclasses={
        Array [
          "grid__item",
          "two-fifths",
          "hard",
          "soft-half-left",
          "background--cover",
          "height-100_1uzzxpe",
        ]
      }
      preloader={[Function]}
      renderElement={[Function]}
      src="http://test.com/test.jpg"
      style={
        Object {
          "backgroundImage": "url('http://test.com/test.jpg')",
        }
      }
      wrapper={[Function]}
    />
  </div>
</Link>
`;

exports[`test bgClasses returns css array 1`] = `
Array [
  "grid__item",
  "two-fifths",
  "hard",
  "soft-half-left",
  "background--cover",
  "height-100_1uzzxpe",
]
`;

exports[`test cardClasses returns css string 1`] = `"background--light-primary push-half-bottom@palm push-bottom@palm-wide-and-up card rounded text-dark-secondary display-block plain card_191rbi9"`;

exports[`test gridClasses returns css string 1`] = `"grid flush height-100_1uzzxpe"`;

exports[`test gridItemClasses returns css string 1`] = `"grid__item three-fifths soft-half floating--left one-whole height-100_1uzzxpe"`;

exports[`test pClasses returns css string 1`] = `"small ellipsis-p_1heh7vk"`;

exports[`test renders with props 1`] = `
<Link
  className="background--light-primary push-half-bottom@palm push-bottom@palm-wide-and-up card rounded text-dark-secondary display-block plain card_191rbi9"
  onClick={[Function]}
  onlyActiveOnIndex={false}
  style={Object {}}
  to="http://test.com">
  <div
    className="grid flush height-100_1uzzxpe">
    <div
      className="grid__item three-fifths soft-half floating--left one-whole height-100_1uzzxpe">
      <div
        className="floating__item one-whole soft-half-sides">
        <h6>
          test item
        </h6>
        <p
          className="small ellipsis-p_1heh7vk">
          test description
        </p>
      </div>
    </div>
    <ImageLoader
      force={true}
      imageclasses={
        Array [
          "grid__item",
          "two-fifths",
          "hard",
          "soft-half-left",
          "background--cover",
          "height-100_1uzzxpe",
        ]
      }
      preloader={[Function]}
      renderElement={[Function]}
      src="http://test.com/test.jpg"
      style={
        Object {
          "backgroundImage": "url('http://test.com/test.jpg')",
        }
      }
      wrapper={[Function]} />
  </div>
</Link>
`;

exports[`test works with no image 1`] = `
<Link
  className="background--light-primary push-half-bottom@palm push-bottom@palm-wide-and-up card rounded text-dark-secondary display-block plain card_191rbi9"
  onClick={[Function]}
  onlyActiveOnIndex={false}
  style={Object {}}
  to="http://test.com">
  <div
    className="grid flush height-100_1uzzxpe">
    <div
      className="grid__item three-fifths soft-half floating--left one-whole height-100_1uzzxpe">
      <div
        className="floating__item one-whole soft-half-sides">
        <h6>
          test item
        </h6>
        <p
          className="small ellipsis-p_1heh7vk">
          test description
        </p>
      </div>
    </div>
    <div
      className="grid__item two-fifths hard soft-half-left background--cover height-100_1uzzxpe placeholder-img_2gkl05" />
  </div>
</Link>
`;

exports[`works with no image 1`] = `
<Link
  className="background--light-primary push-half-bottom@palm push-bottom@palm-wide-and-up card rounded text-dark-secondary display-block plain card_191rbi9"
  onClick={[Function]}
  onlyActiveOnIndex={false}
  style={Object {}}
  to="http://test.com"
>
  <div
    className="grid flush height-100_1uzzxpe"
  >
    <div
      className="grid__item three-fifths soft-half floating--left one-whole height-100_1uzzxpe"
    >
      <div
        className="floating__item one-whole soft-half-sides"
      >
        <h6>
          test item
        </h6>
        <p
          className="small ellipsis-p_1heh7vk"
        >
          test description
        </p>
      </div>
    </div>
    <div
      className="grid__item two-fifths hard soft-half-left background--cover height-100_1uzzxpe placeholder-img_2gkl05"
    />
  </div>
</Link>
`;
